@@ -198,7 +198,7 @@ def httpget(pypiurls):
             self.url2response = {}
             self._md5 = py.std.hashlib.md5()
 
-        def __call__(self, url, allow_redirects=False):
+        def __call__(self, url, allow_redirects=False, extra_headers=None):
             class mockresponse:
                 def __init__(xself, url):
                     fakeresponse = self.url2response.get(url)
